log/build_2025-03-19_18-13-51/turtlebot_dqn/stderr.log
  File "/home/asad/turtlebot0/install/turtlebot_dqn/lib/python3.10/site-packages/turtlebot_dqn/dqn_node.py", line 140
    plot_path = os.path.expanduser('~/turtlebplot_path = os.path.expanduser('~/turtlebot0/dqn_training_plot.png')
                                                                                                               ^
SyntaxError: unterminated string literal (detected at line 140)

